# pharmagenie

./: .agents-cli-spec.md  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  agent.py
docs/: demo_script.md  deployment.md  evaluation.md  kaggle_writeup.md  sample_queries.md  screenshots.md  setup.md  submission_checklist.md
src/pharmagenie/: __init__.py  config.py  logging_config.py  models.py  safety.py
src/pharmagenie/agents/: __init__.py  base.py  coordinator.py  discovery_agents.py  domain_agents.py  evidence_ranking.py  planner.py  report_agent.py
src/pharmagenie/ai/: __init__.py  synthesis.py
src/pharmagenie/api/: main.py
src/pharmagenie/mcp_servers/: __init__.py  adk_tools.py  clinical_trials_server.py  pubchem_server.py  pubmed_server.py  server.py  tools.py  uniprot_server.py
src/pharmagenie/reports/: markdown.py  pdf.py
src/pharmagenie/sources/: __init__.py  base.py  clinical_trials.py  pubchem.py  pubmed.py  uniprot.py
src/pharmagenie/ui/: streamlit_app.py
tests/: test_api.py  test_reports.py  test_safety.py  test_synthesis.py  test_workflow.py
tests/eval/: eval_config.yaml
tests/eval/datasets/: basic-dataset.json
tools/: create_demo_video.py
